# topology-visualizer

./: COMMANDS.md  README.md  Taskfile.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  wellness-atlas-mock.json
.claude/: settings.local.json
.task/checksum/: atlas  build  install-pipeline  install-py  install-web
heal-daily-pages/: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
heal-daily-pages/alembic/: env.py
heal-daily-pages/alembic/versions/: 001_initial_schema.py
heal-daily-pages/fixtures/: sample_user_30days.json
heal-daily-pages/src/heal_pages/: __init__.py  backfill.py  cli.py  config.py  consumer.py  db.py  identity.py  models.py  redact.py  search.py  writer.py
heal-daily-pages/src/heal_pages/extractors/: __init__.py  base.py  email.py  financial.py  messages.py  wearable.py
heal-daily-pages/src/heal_pages/recognizers/: __init__.py  medications.py
heal-daily-pages/src/heal_pages/sources/: base.py  fixture.py
heal-daily-pages/tests/: conftest.py  test_backfill.py  test_consumer.py  test_fixture_adapter.py  test_redact.py  test_redact_validator.py  test_wearable_extractor.py  test_writer.py
pipeline/: .dockerignore  DESIGN.md  Dockerfile  atlas.json  augment-biomarkers.mjs  clear-user-points.mjs  generate-persona-raw.mjs  generate-user-raw.mjs  generated_input.json  persona-avg_female.json  persona-avg_male.json  persona-elite_female.json  persona-elite_male.json  publish-raw.mjs  pyproject.toml  sample_input.json  seed-user-points.mjs
pipeline/heal_atlas/: cohorts.py  featurize.py  from_db.py  reduce.py
public/: atlas.json  raw.json
src/: App.tsx  index.css
src/components/: AtlasCanvas.tsx  ClusterHulls.tsx  ClusterLabels.tsx  ClusterShapes.tsx  ControlBar.tsx  DataLoader.tsx  EventCard.tsx  (+13 more)
(+24 files in other folders)
