[project]
name = "heal-daily-pages"
version = "0.1.0"
description = "Per-user-day indexing for behavioral, semantic, and lexical retrieval — V0 hackathon scaffold"
readme = "DESIGN.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.6",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "spacy>=3.7,<3.8",
    "en-core-web-sm",
    # spaCy 3.7 / thinc 8.x are built against numpy 1.x ABI. numpy 2.x breaks
    # the C extension load (numpy.dtype size 96 vs 88). Pin until we upgrade
    # to spaCy ≥3.8.
    "numpy<2",
]

[project.scripts]
heal-pages = "heal_pages.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heal_pages"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
