[project]
name = "heal-atlas-pipeline"
version = "0.1.0"
description = "Featurization + UMAP pipeline emitting AtlasDataset JSON for embedding-atlas"
readme = "DESIGN.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "umap-learn>=0.5.5",
    "scikit-learn>=1.3",
    "psycopg[binary]>=3.2",
]

[project.scripts]
heal-atlas = "heal_atlas.reduce:main"
heal-atlas-from-db = "heal_atlas.from_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["heal_atlas"]
